--- a/configuration.yaml
+++ b/configuration.yaml
@@ -15,6 +15,7 @@ binary_sensor: !include components/binary_sensor.yaml
 cover: !include components/cover.yaml
 spotify: !include components/spotify.yaml
 climate: !include components/climate.yaml
+rest_command: !include components/rest_command.yaml
 
 # INPUTS
 input_boolean: !include inputs/input_boolean.yaml
