--- a/components/sensor.yaml
+++ b/components/sensor.yaml
@@ -152,26 +152,32 @@
         friendly_name: Température Salon
         value_template: "{{state_attr('climate.salon', 'current_temperature')}}"
         icon_template:  "mdi:thermometer"
+        unit_of_measurement: "°C"
     humidity_living_room:
         friendly_name: Humidité Salon
         value_template: "{{state_attr('climate.salon', 'current_humidity')}}"
         icon_template: "mdi:water-percent"
+        unit_of_measurement: "%"
     temperature_main_bedroom:
         friendly_name: Température Chamblre
         value_template: "{{state_attr('climate.chambre', 'current_temperature')}}"
         icon_template: "mdi:thermometer"
+        unit_of_measurement: "°C"
     humidity_main_bedroom: 
         friendly_name: Humidité Chambre
         value_template: "{{state_attr('climate.chambre', 'current_humidity')}}"
         icon_template: "mdi:water-percent"
+        unit_of_measurement: "%"
     temperature_secondary_bedroom:
         friendly_name: Température Bureau
         value_template: "{{state_attr('climate.bureau', 'current_temperature')}}"
         icon_template: "mdi:thermometer"
+        unit_of_measurement: "°C"
     humidity_secondary_bedroom:
         friendly_name: Hunimidté Bureau
         value_template: "{{state_attr('climate.bureau', 'current_humidity')}}"
         icon_template: "mdi:water-percent"
+        unit_of_measurement: "%"
         
         
         
