--- a/components/media_player.yaml
+++ b/components/media_player.yaml
@@ -4,7 +4,6 @@
   name: Philips Android TV
   device_class: androidtv
   host: 192.168.1.13
-  adb_server_ip: 127.0.0.1
   get_sources: false
   apps:
     com.spotify.tv.android: Spotify
@@ -14,3 +13,4 @@
     com.google.android.apps.mediashell: Cast
     com.google.android.tvlauncher: Home
     com.android.vending: Google Play Store
+    com.amazon.amazonvideo.livingroom: Amazon Prime
