Temporarly deactivate ZWAVE... (RPI4 / AEONTEC not compatible)

--- a/configuration.yaml
+++ b/configuration.yaml
@@ -7,7 +7,7 @@ api:
 # COMPONENTS
 neato: !include components/neato.yaml
 device_tracker: !include components/device_tracker.yaml
-zwave: !include components/zwave.yaml
+#zwave: !include components/zwave.yaml
 light: !include components/light.yaml
 media_player: !include components/media_player.yaml
 sensor: !include components/sensor.yaml
