Google Home is now stopped when I leave (Security)

--- a/components/switch.yaml
+++ b/components/switch.yaml
@@ -4,12 +4,25 @@
     coffee_maker:
       friendly_name: "Machine a café"
       icon_template: "mdi:coffee-maker"
-      value_template: "{{ is_state('light.coffe_machine', 'on') }}"
+      value_template: "{{ is_state('light.coffe_machine_internal', 'on') }}"
       turn_on:
         service: light.turn_on
         target:
-          entity_id: light.coffe_machine
+          entity_id: light.coffe_machine_internal
       turn_off:
         service: light.turn_off
         target:
-          entity_id: light.coffe_machine
+          entity_id: light.coffe_machine_internal
+    
+    google_home:
+      friendly_name: "Google Home"
+      icon_template: "mdi:google-assistant"
+      value_template: "{{ is_state('light.google_home_internal', 'on') }}"
+      turn_on:
+        service: light.turn_on
+        target:
+          entity_id: light.google_home_internal
+      turn_off:
+        service: light.turn_off
+        target:
+          entity_id: light.google_home_internal
