--- a/configuration.yaml
+++ b/configuration.yaml
@@ -7,7 +7,6 @@ api:
 # COMPONENTS
 neato: !include components/neato.yaml
 device_tracker: !include components/device_tracker.yaml
-#zwave: !include components/zwave.yaml
 light: !include components/light.yaml
 media_player: !include components/media_player.yaml
 sensor: !include components/sensor.yaml
@@ -17,6 +16,8 @@ spotify: !include components/spotify.yaml
 climate: !include components/climate.yaml
 rest_command: !include components/rest_command.yaml
 switch: !include components/switch.yaml
+spotcast: !include components/spotcast.yaml
+
 
 # INPUTS
 input_boolean: !include inputs/input_boolean.yaml
