--- a/components/media_player.yaml
+++ b/components/media_player.yaml
@@ -7,6 +7,7 @@
   get_sources: false
   apps:
     com.spotify.tv.android: Spotify
+    com.aspiro.tidal: Tidal
     org.xbmc.kodi: Kodi
     tv.molotov.app: Molotov
     com.google.android.youtube.tv: YouTube
