--- a/components/sensor.yaml
+++ b/components/sensor.yaml
@@ -15,6 +15,7 @@
     - type: memory_use_percent
     - type: memory_use
     - type: memory_free
+    - type: processor_temperature
 
 # Neato specific sensors
 # https://www.home-assistant.io/integrations/template/
@@ -40,70 +41,5 @@
           icon_template: "mdi:progress-clock"
           unit_of_measurement: "%"
           
-      
-# Time to reach home / work sensors
-# https://www.home-assistant.io/integrations/template/
-- platform: template
-  sensors:
-    target_arrival_home_to_ricardo:
-        friendly_name: "Arrivé à Ricardo depuis la maison"
-        value_template: >-
-            {% if states('sensor.home_to_ricardo') != 'unknown' %}
-            {% set time = states('sensor.home_to_ricardo') | int * 60 %}
-            {% else %}
-            {% set time = 0 %}
-            {% endif %}
-            {% set now = as_timestamp(states('sensor.date_time_iso'),0) | int %}
-            {{(now + time) | timestamp_custom('%H:%M') }}
-        icon_template: "mdi:briefcase-outline"
-    target_arrival_ricardo_to_home:
-        friendly_name: "Arrivé à la maison depuis Ricardo"
-        value_template: >-
-            {% if states('sensor.ricardo_to_home') != 'unknown' %}
-            {% set time = states('sensor.ricardo_to_home') | int * 60 %}
-            {% else %}
-            {% set time = 0 %}
-            {% endif %}
-            {% set now = as_timestamp(states('sensor.date_time_iso'),0) | int %}
-            {{(now + time) | timestamp_custom('%H:%M') }}
-        icon_template: "mdi:home-outline"
-        
-        
-# Temperature sensors
-# https://www.home-assistant.io/integrations/template/
-- platform: template
-  sensors:
-    temperature_salon:
-        friendly_name: Température Salon
-        value_template: "{{ state_attr('climate.salon', 'current_temperature') }}"
-        icon_template: "mdi:thermometer"
-        unit_of_measurement: "°C"
-    temperature_bureau:
-        friendly_name: Température Bureau
-        value_template: "{{ state_attr('climate.bureau', 'current_temperature') }}"
-        icon_template: "mdi:thermometer"
-        unit_of_measurement: "°C"
-    temperature_chambre:
-        friendly_name: Température Chambre
-        value_template: "{{ state_attr('climate.chambre', 'current_temperature') }}"
-        icon_template: "mdi:thermometer"
-        unit_of_measurement: "°C"
-    humidity_salon:
-        friendly_name: Humidité Salon
-        value_template: "{{ state_attr('climate.salon', 'current_humidity') }}"
-        icon_template: "mdi:water-percent"
-        unit_of_measurement: "%"
-    humidity_bureau:
-        friendly_name: Humidité Bureau
-        value_template: "{{ state_attr('climate.bureau', 'current_humidity') }}"
-        icon_template: "mdi:water-percent"
-        unit_of_measurement: "%"
-    humidity_chambre:
-        friendly_name: Humidité Chambre
-        value_template: "{{ state_attr('climate.chambre', 'current_humidity') }}"
-        icon_template: "mdi:water-percent"
-        unit_of_measurement: "%"        
-  
-
 
 
